lec4 homework stuff

--- a/lec3/hw/lec3-exercise-solution.ipynb
+++ b/lec3/hw/lec3-exercise-solution.ipynb
@@ -1376,7 +1376,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Solution: The issue is that we've included mpg in the set of features that we use to make predictions. Given mpg, it's pretty easy to predict mpg (you just set that theta to 1 and all others to 0)."
+    "Solution: The issue is that we've included price in the set of features that we use to make predictions. Given price, it's pretty easy to predict price (you just set that theta to 1 and all others to 0)."
    ]
   }
  ],
