--- a/lec3/hw/lec3-exercise.ipynb
+++ b/lec3/hw/lec3-exercise.ipynb
@@ -510,7 +510,9 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
