fixed minor issue where I forgot to tell students to disable regularization

--- a/lec5/hw/lec5-exercise.ipynb
+++ b/lec5/hw/lec5-exercise.ipynb
@@ -2586,7 +2586,9 @@
     "\n",
     "To capture these effects, create a new model `p3c_model` that has 16 features, corresponding to a degree 2 polynomial of our original 4 features.\n",
     "\n",
-    "Use the sklearn pipeline feature. Make sure to use a StandardScaler like in HW4. That is, your pipeline should have 3 steps: `StandardScaler`, `PolynomialFeatures`, and `LogisticRegression`. \n",
+    "Use the sklearn pipeline feature. Make sure to use a StandardScaler like in HW4. That is, your pipeline should have 3 steps: `StandardScaler`, `PolynomialFeatures`, and `LogisticRegression`.\n",
+    "\n",
+    "For this problem, make sure to set `penalty = 'none'`. This will disable regularization. We'll discuss regularization in lecture 6.\n",
     "\n",
     "**Note:** Because the `PolynomialFeatures` step already creates an intercept, it is slightly better practice to set `fit_intercept = False` in `LogisticRegression`, but this is not necessary."
    ]
@@ -2620,7 +2622,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compute the test accuracy of your model below. You'll see it is actually slightly higher than our training accuracy. This implies that we are probably not overfitting, even with all these additional features."
+    "Compute the test accuracy of your model below. You'll see it is somewhat lower (77%) than the training accuracy and also slightly lower than when we fit a model without polynomial features. This implies that there is potentially overfitting happening here."
    ]
   },
   {
@@ -2666,7 +2668,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Optionally, try fitting a degree 5 polynomial just like in p3c_model. Then compute the training and test accuracy. You should see that the training error is lower, but the test error is higher. This is a warning that we are overfitting. Note: You may need to set the `max_iter` in the `LogisticRegression` object to a larger number, e.g. 10000.\n",
+    "Optionally, try fitting a degree 5 polynomial just like in p3c_model. Then compute the training and test accuracy. You should see that the training error is lower, but the test error is higher. This is a warning that we are overfitting. Note: You may need to set the `max_iter` in the `LogisticRegression` object to a larger number, e.g. 10000 or even 100000.\n",
+    "\n",
+    "Again, make sure to set `penalty = 'none'`.\n",
     "\n",
     "In the next lecture we will talk about regularization in the context of Logistic Regression."
    ]
