added hw6 starter cosde

--- a/lec6/hw/lec6-exercise-solution.ipynb
+++ b/lec6/hw/lec6-exercise-solution.ipynb
@@ -255,9 +255,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Important note:** The `.fit` method in `LogisticRegression` picks parameters that minimize the log loss. It does not directly consider entropy.\n",
+    "**Important note:** The `.fit` method in `LogisticRegression` picks parameters that minimize the log loss. It does not directly consider accuracy.\n",
     "\n",
-    "We will see in optional problem 2 that sometimes these two ideas are in conflict."
+    "We will see in optional problem 3 that sometimes these two ideas are in conflict."
    ]
   },
   {
@@ -2761,20 +2761,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### P2F: Using sklearn to Compute Optimal Unregularized Parameters"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "The intercept and theta we got above are not the same as we used earlier in the problem. For example, your code from P2E found that the coefficient for `FGA` is 0.24, but the example I gave at the beginning of this problem was 0.2.\n",
     "\n",
     "The reason is that the coefficient we computed at the beginning of this problem was from a regularized model where `C=1e-3`.\n",
     "\n",
-    "Below, create a `LogisticRegression` object with `penalty = 'none'` and fit it to the training set. Then look at the `intercept_` and `coef_` and they should be very close to the intercept and coefficients that you computed in `P2E`.\n",
-    "\n",
-    "This is great! It means that what you just did in `P2E` is implement your very own logistic regression model. Good job!"
+    "Below, we create a `LogisticRegression` object with `penalty = 'none'` and fit it to the training set."
    ]
   },
   {
@@ -2800,6 +2791,15 @@
    "source": [
     "p2f_model = LogisticRegression(penalty = 'none')\n",
     "p2f_model.fit(df_train[p2_features], df_train[\"WON\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observe below that the `intercept_` and `coef_` and they should be very close to the intercept and coefficients that you computed earlier in `P2E`.\n",
+    "\n",
+    "This is great! It means that what you just did in `P2E` is implement your very own logistic regression model. Good job!"
    ]
   },
   {
@@ -2848,7 +2848,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### P2F: Fitting a Regularized Model"
+    "#### P2G: Fitting a Regularized Model"
    ]
   },
   {
@@ -3511,7 +3511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
